[project]
name = "vectordive"
version = "0.1.0"
description = ""
authors = [
    {name = "SoSato",email = "satou5473@gmail.com"}
]
license = {text = "MIT-based License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
